# advent-of-code

./: .gitignore  LICENSE  README.md  aoc_day_01_2.py  aoc_day_03_2.py  aoc_day_05_2.py  aoc_day_06_1.py  test.sh
advent_of_code/2015/day01/: aoc_day_01.py
advent_of_code/2015/day02/: aoc_day_02.py
advent_of_code/2015/day03/: aoc_day_03.py
advent_of_code/2015/day04/: aoc_day_04.py
advent_of_code/2015/day05/: aoc_day_05.py
advent_of_code/2015/day06/: aoc_day_06.py
advent_of_code/2015/day07/: aoc_day_07.py
advent_of_code/2015/day08/: aoc_day_08.py
advent_of_code/2015/day09/: aoc_day_09.py
advent_of_code/2015/day10/: aoc_day_10.py
advent_of_code/2015/day11/: aoc_day_11.py
advent_of_code/2015/day12/: aoc_day_12.py
advent_of_code/2015/day13/: aoc_day_13.py
advent_of_code/2015/day14/: aoc_day_14.py
advent_of_code/2015/day15/: aoc_day_15.py
advent_of_code/2015/day16/: aoc_day_16.py
advent_of_code/2015/day17/: aoc_day_17.py
advent_of_code/2015/day18/: aoc_day_18.py
advent_of_code/2015/day19/: aoc_day_19.py  aoc_day_19_redo.py
advent_of_code/2015/day20/: aoc_day_20.py
advent_of_code/2015/day21/: aoc_day_21.py
advent_of_code/2015/day23/: day23.py
advent_of_code/2016/day01/: Cargo.toml  aoc_day_01_2.py
advent_of_code/2016/day02/: aoc_day_02_1.py  aoc_day_02_2.py
advent_of_code/2016/day03/: aoc_day_03_1.py
advent_of_code/2016/day04/: aoc_day_04_1.py  aoc_day_04_2.py
advent_of_code/2016/day05/: aoc_day_05_1.py  aoc_day_05_2.py
advent_of_code/2016/day06/: aoc_day_06_2.py
advent_of_code/2016/day07/: aoc_day_07_1.py
advent_of_code/2016/day08/: aoc_day_08_1.py  aoc_day_08_2.py
advent_of_code/2016/day09/: aoc_day_09_2.py
advent_of_code/2016/day11/: aoc_day_11_1.py  aoc_day_11_input2.txt
advent_of_code/2016/day13/: aoc_day_13_1.py  aoc_day_13_2.py
advent_of_code/2016/day14/: aoc_day14_1.py  aoc_day14_ante.py
advent_of_code/2016/day15/: aoc_day_15.py
advent_of_code/2016/day16/: aoc_day_16.py
advent_of_code/2016/day17/: aoc_day_17.py
advent_of_code/2016/day20/: aoc_day_20.py
advent_of_code/2016/day21/: aoc_day_21.py
advent_of_code/2016/day22/: aoc_day_22.py
advent_of_code/2016/day23/: aoc_day_23.py
day01/: aoc_day_01_1.py
day05/: aoc_day_05_2.py
day07/: aoc_day_07_2.py
day08/: aoc_day_08_1.py  aoc_day_08_2.py
day09/: aoc_day_09_1.py
day10/: aoc_day_10.py
day11/: aoc_day_11_1.py  aoc_day_11_2.py  aoc_day_11_input.txt
day12/: aoc_day_12_1.py  aoc_day_12_2.py
day13/: aoc_day_13_1.py  solution.py
day14/: aoc_day14_2.py
day17/: aoc_day_17.py
day18/: aoc_day_18.py
day19/: aoc_day_19.py
day21/: aoc_day_21.py
day24/: aoc_day_24.py
kt/2019/day01/: day01.kt
kt/tst/: IntcodeComputerTest.kt
rs/: Cargo.toml  README.md
rs/2020/day01/src/: main.rs
rs/2020/day02/: Cargo.toml
rs/2020/day02/src/: main.rs
rs/2020/day03/: Cargo.toml
rs/2020/day03/src/: main.rs
rs/2020/day04/: Cargo.toml
rs/2020/day04/src/: main.rs
rs/2020/day05/: Cargo.toml
rs/2020/day05/src/: main.rs
rs/2020/day06/: Cargo.toml
rs/2020/day06/src/: main.rs
rs/2020/day07/: Cargo.toml
rs/2020/day07/src/: main.rs
rs/2020/day08/: Cargo.toml
rs/2020/day08/src/: main.rs
rs/2020/day09/: Cargo.toml
rs/2020/day09/src/: main.rs
rs/2020/day10/: Cargo.toml
rs/2020/day10/src/: main.rs
rs/2020/day11/: Cargo.toml
rs/2020/day11/src/: main.rs
rs/2020/day12/: Cargo.toml
rs/2020/day12/src/: main.rs
rs/2020/day13/: Cargo.toml
rs/2020/day13/src/: main.rs
rs/2020/day14/: Cargo.toml
rs/2020/day14/src/: main.rs
rs/2020/day15/: Cargo.toml
rs/2020/day15/src/: main.rs
rs/2020/day16/: Cargo.toml
rs/2020/day16/src/: main.rs
rs/2020/day17/: Cargo.toml
rs/2020/day17/src/: main.rs
rs/2020/day18/: Cargo.toml
rs/2020/day18/src/: main.rs
rs/2020/day19/: Cargo.toml
rs/2020/day19/src/: main.rs
rs/2020/day20/: Cargo.toml
rs/2020/day20/src/: main.rs
rs/2020/day21/: Cargo.toml
rs/2020/day21/src/: main.rs
rs/2020/day22/: Cargo.toml
rs/2020/day22/src/: main.rs
rs/2020/day23/: Cargo.toml
rs/2020/day23/src/: main.rs
rs/2020/day24/: Cargo.toml
rs/2020/day24/src/: main.rs
rs/2020/day25/: Cargo.toml
rs/2020/day25/src/: main.rs
rs/2021/day01/src/: main.rs
rs/2021/day02/src/: main.rs
rs/2021/day03/src/: main.rs
rs/2021/day04/src/: input.txt  main.rs
rs/2021/day05/src/: main.rs
rs/2021/day06/src/: main.rs
rs/2021/day07/src/: main.rs
rs/2021/day08/src/: main.rs
rs/2021/day09/src/: main.rs
rs/2021/day10/src/: main.rs
rs/2021/day11/src/: main.rs
rs/2021/day12/src/: main.rs
rs/2021/day13/src/: main.rs
rs/2021/day14/src/: main.rs
rs/2021/day15/src/: main.rs
rs/2021/day16/src/: main.rs
rs/2021/day17/src/: main.rs
rs/2021/day18/src/: main.rs
rs/2021/day19/src/: main.rs
rs/2021/day20/src/: main.rs
rs/2021/day21/src/: main.rs
rs/2021/day22/src/: main.rs
rs/2021/day23/src/: main.rs
rs/2021/day24/src/: main.rs
rs/2021/day25/src/: main.rs
rs/2022/day01/src/: main.rs
rs/2022/day02/src/: main.rs
rs/2022/day03/src/: main.rs
rs/2022/day04/src/: main.rs
rs/2022/day05/src/: main.rs
rs/2022/day06/src/: main.rs
rs/2022/day07/src/: main.rs
rs/2022/day08/src/: main.rs
rs/2022/day09/src/: main.rs
rs/2022/day10/src/: main.rs
rs/2022/day11/src/: main.rs
rs/2022/day12/src/: main.rs
rs/2022/day13/src/: main.rs
rs/2022/day14/src/: main.rs
rs/2022/day15/src/: main.rs
rs/2022/day16/src/: main.rs
rs/2022/day17/src/: main.rs
rs/2022/day18/src/: input.txt  main.rs
rs/2022/day19/src/: main.rs
rs/2022/day20/src/: main.rs
rs/2022/day21/src/: main.rs
rs/2022/day22/: Cargo.toml
rs/2022/day22/src/: main.rs
rs/2022/day23/src/: main.rs
rs/2022/day24/src/: main.rs
rs/2022/day25/src/: main.rs
rs/2023/day01/src/: main.rs
rs/2023/day02/src/: main.rs
rs/2023/day03/src/: main.rs
rs/2023/day04/src/: main.rs
rs/2023/day05/src/: main.rs
rs/2023/day06/src/: main.rs
rs/2023/day07/src/: main.rs
rs/2023/day08/src/: main.rs
rs/2023/day09/src/: main.rs
rs/2023/day10/src/: main.rs
rs/2023/day11/src/: main.rs
rs/src/: lib.rs
(+166 files in other folders)
