[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Christopher Cordero <ccordero@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "2020-01"
path = "2020/day01/src/main.rs"

[[example]]
name = "2020-02"
path = "2020/day02/src/main.rs"

[[example]]
name = "2020-03"
path = "2020/day03/src/main.rs"

[[example]]
name = "2020-04"
path = "2020/day04/src/main.rs"

[[example]]
name = "2020-05"
path = "2020/day05/src/main.rs"

[[example]]
name = "2020-06"
path = "2020/day06/src/main.rs"

[[example]]
name = "2020-07"
path = "2020/day07/src/main.rs"

[[example]]
name = "2020-08"
path = "2020/day08/src/main.rs"

[[example]]
name = "2020-09"
path = "2020/day09/src/main.rs"

[[example]]
name = "2020-10"
path = "2020/day10/src/main.rs"

[[example]]
name = "2020-11"
path = "2020/day11/src/main.rs"

[[example]]
name = "2020-12"
path = "2020/day12/src/main.rs"

[[example]]
name = "2020-13"
path = "2020/day13/src/main.rs"
