[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Christopher Cordero <ccordero@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "2020-01"
path = "2020/day01/src/main.rs"

[[example]]
name = "2020-02"
path = "2020/day02/src/main.rs"

[[example]]
name = "2020-03"
path = "2020/day03/src/main.rs"

[[example]]
name = "2020-04"
path = "2020/day04/src/main.rs"

[[example]]
name = "2020-05"
path = "2020/day05/src/main.rs"

[[example]]
name = "2020-06"
path = "2020/day06/src/main.rs"

[[example]]
name = "2020-07"
path = "2020/day07/src/main.rs"

[[example]]
name = "2020-08"
path = "2020/day08/src/main.rs"

[[example]]
name = "2020-09"
path = "2020/day09/src/main.rs"

[[example]]
name = "2020-10"
path = "2020/day10/src/main.rs"

[[example]]
name = "2020-11"
path = "2020/day11/src/main.rs"

[[example]]
name = "2020-12"
path = "2020/day12/src/main.rs"

[[example]]
name = "2020-13"
path = "2020/day13/src/main.rs"

[[example]]
name = "2020-14"
path = "2020/day14/src/main.rs"

[[example]]
name = "2020-15"
path = "2020/day15/src/main.rs"

[[example]]
name = "2020-16"
path = "2020/day16/src/main.rs"

[[example]]
name = "2020-17"
path = "2020/day17/src/main.rs"

[[example]]
name = "2020-18"
path = "2020/day18/src/main.rs"

[[example]]
name = "2020-19"
path = "2020/day19/src/main.rs"

[[example]]
name = "2020-20"
path = "2020/day20/src/main.rs"

[[example]]
name = "2020-21"
path = "2020/day21/src/main.rs"

[[example]]
name = "2020-22"
path = "2020/day22/src/main.rs"

[[example]]
name = "2020-23"
path = "2020/day23/src/main.rs"

[[example]]
name = "2020-24"
path = "2020/day24/src/main.rs"

[[example]]
name = "2020-25"
path = "2020/day25/src/main.rs"

[[example]]
name = "2021-01"
path = "2021/day01/src/main.rs"

[[example]]
name = "2021-02"
path = "2021/day02/src/main.rs"

[[example]]
name = "2021-03"
path = "2021/day03/src/main.rs"

[[example]]
name = "2021-04"
path = "2021/day04/src/main.rs"

[[example]]
name = "2021-05"
path = "2021/day05/src/main.rs"

[[example]]
name = "2021-06"
path = "2021/day06/src/main.rs"

[[example]]
name = "2021-07"
path = "2021/day07/src/main.rs"

[[example]]
name = "2021-08"
path = "2021/day08/src/main.rs"

[[example]]
name = "2021-09"
path = "2021/day09/src/main.rs"

[[example]]
name = "2021-10"
path = "2021/day10/src/main.rs"

[[example]]
name = "2021-11"
path = "2021/day11/src/main.rs"

[[example]]
name = "2021-12"
path = "2021/day12/src/main.rs"
